--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="col-md-4 text-end">
                     <h3>Identitas diri</h3>
                     <p>
-                        Nama : Imam Ariadi <br /> Usia : 18 Tahun <br> TTL : Bandung, 21 November 2004 <br /> Status : Lajang <br /> Pendidikan : Sedang Menempuh Pendidikan di UNILA <br /> Prodi : S1 Teknik Informatika
+                        Nama : Imam Ariadi <br /> Usia : 18 Tahun <br> Status : Lajang <br /> Pendidikan : Sedang Menempuh Pendidikan di UNILA <br /> Prodi : S1 Teknik Informatika
                     </p>
                 </div>
                 <div class="col-md-4 text-end">
